--- a/django_blog/blog/templates/blog/post_detail.html
+++ b/django_blog/blog/templates/blog/post_detail.html
@@ -16,5 +16,31 @@
     <a href="{% url 'post-delete' object.pk %}">Delete</a>
     {% endif %}
     <a href="{% url 'post-list' %}">Back to Posts</a>
+
+    {% extends 'base_generic.html' %} {% block content %}
+    <h1>{{ post.title }}</h1>
+    <p>{{ post.content }}</p>
+    <p>Posted by: {{ post.author }} on {{ post.published_date }}</p>
+
+    <h2>Comments</h2>
+    {% for comment in comments %}
+    <div>
+      <p><strong>{{ comment.author }}</strong>: {{ comment.content }}</p>
+      <p>Posted on: {{ comment.created_at }}</p>
+      {% if comment.author == user %}
+      <a href="{% url 'edit-comment' pk=comment.pk %}">Edit</a>
+      <a href="{% url 'delete-comment' pk=comment.pk %}">Delete</a>
+      {% endif %}
+    </div>
+    {% empty %}
+    <p>No comments yet.</p>
+    {% endfor %}
+
+    <h3>Add a Comment</h3>
+    <form method="POST">
+      {% csrf_token %} {{ comment_form.as_p }}
+      <button type="submit">Submit</button>
+    </form>
+    {% endblock %}
   </body>
 </html>
